--- a/src/app/views/category/category.component.html
+++ b/src/app/views/category/category.component.html
@@ -1,10 +1,18 @@
 <div class="animated fadeIn">
     <div class="row">
+        <div class="col-md-12 text-right">
+            <button
+                class="btn btn-primary mb-3"
+                (click)="openAddCategoryModal(addEditCategoryModal)"
+            >
+                Add Category
+            </button>
+        </div>
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i>
-                    Users
+                    Category
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -13,8 +21,9 @@
                                 <tr>
                                     <th>Name</th>
                                     <th>Date</th>
+                                    <th>Priority</th>
                                     <th>Status</th>
-                                    <th></th>
+                                    <th width="100"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -23,6 +32,7 @@
                                         <td>{{category.categoryName}}</td>
 
                                         <td>{{category.createDate | date:'medium'}}</td>
+                                        <td>{{category.priority}}</td>
                                         <td>
                                             <span
                                                 *ngIf="category.isActive"
@@ -41,7 +51,7 @@
                                             <button
                                                 type="button"
                                                 class="btn btn-primary btn-sm"
-                                                (click)="openEditUserMdal(editUserModal,user)"
+                                                (click)="openEditCategoryModal(addEditCategoryModal,category)"
                                             >
                                                 <i
                                                     class="fa fa-edit"
@@ -51,7 +61,7 @@
                                             <button
                                                 type="button"
                                                 class="btn btn-danger btn-sm"
-                                                (click)="deleteUser(user)"
+                                                (click)="deleteCategory(category)"
                                             >
                                                 <i
                                                     class="fa fa-trash"
@@ -131,13 +141,13 @@
 
 </div>
 
-<ng-template #editUserModal>
+<ng-template #addEditCategoryModal>
     <div class="modal-header">
         <h4
             class="modal-title"
             id="modal-basic-title"
         >
-            User Details
+            Category Details
         </h4>
         <button
             type="button"
@@ -152,59 +162,41 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="pname">First Name:</label>
+                    <label for="pname">Category Name:</label>
                     <input
                         type="text"
                         name="pname"
-                        [(ngModel)]="userFormDetails.firstName"
+                        [(ngModel)]="categoryFormDetails.categoryName"
                         class="form-control"
                     >
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="pname">Last Name:</label>
+                    <label for="pname">Category Priority:</label>
                     <input
-                        type="text"
+                        type="number"
                         name="pname"
-                        [(ngModel)]="userFormDetails.lastName"
+                        [(ngModel)]="categoryFormDetails.priority"
                         class="form-control"
                     >
                 </div>
             </div>
 
             <div class="col-md-6">
-                <div class="form-group">
-                    <label for="pname">Email:</label>
+                <div class="form-group form-check">
                     <input
-                        type="text"
-                        name="pname"
-                        [(ngModel)]="userFormDetails.emailId"
-                        class="form-control"
+                        type="checkbox"
+                        class="form-check-input"
+                        id="exampleCheck1"
+                        [(ngModel)]="categoryFormDetails.isActive"
                     >
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="pname">Mobile:</label>
-                    <input
-                        type="text"
-                        name="pname"
-                        [(ngModel)]="userFormDetails.mobileNumber"
-                        class="form-control"
+                    <label
+                        class="form-check-label"
+                        for="exampleCheck1"
                     >
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="pname">Username:</label>
-                    <input
-                        type="text"
-                        name="pname"
-                        [(ngModel)]="userFormDetails.username"
-                        class="form-control"
-                        readonly
-                    >
+                        Is Active
+                    </label>
                 </div>
             </div>
         </div>
@@ -213,9 +205,18 @@
         <button
             type="button"
             class="btn btn-primary"
-            (click)="updateUserProfile()"
+            *ngIf="!isEdit"
+            (click)="addCategory()"
         >
-            Update
+            Add Category
+        </button>
+        <button
+            type="button"
+            class="btn btn-primary"
+            *ngIf="isEdit"
+            (click)="updateCategory()"
+        >
+            Update Category
         </button>
         <button
             type="button"
