--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -11,108 +11,41 @@
             dropdown
             placement="bottom right"
         >
-            <a
-                class="nav-link"
-                data-toggle="dropdown"
-                href="#"
-                role="button"
-                aria-haspopup="true"
-                aria-expanded="false"
-                dropdownToggle
-                (click)="false"
-            >
-                <img
-                    src="assets/img/avatars/6.jpg"
-                    class="img-avatar"
-                    alt="admin@bootstrapmaster.com"
-                >
-            </a>
+            <div class="row">
+                <div class="col-md-7 text-right mt-2 pr-0">Hi, {{userName}}</div>
+                <div class="col-md-5 pl-0">
+                    <a
+                        class="nav-link"
+                        data-toggle="dropdown"
+                        href="#"
+                        role="button"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                        dropdownToggle
+                        (click)="false"
+                    >
+                        <div class="avtar-box">
+                            <ngx-avatar
+                                bgColor="{{themeColor}}"
+                                size="40"
+                                name="{{userName}}"
+                            ></ngx-avatar>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <div
                 class="dropdown-menu dropdown-menu-right"
                 *dropdownMenu
                 aria-labelledby="simple-dropdown"
             >
-                <div class="dropdown-header text-center">
-                    <strong>Account</strong>
-                </div>
                 <a
                     class="dropdown-item"
+                    (click)="logOut($event)"
                     href="#"
                 >
-                    <i class="fa fa-bell-o"></i>
-                    Updates
-                    <span class="badge badge-info">42</span>
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-envelope-o"></i>
-                    Messages
-                    <span class="badge badge-success">42</span>
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-tasks"></i>
-                    Tasks
-                    <span class="badge badge-danger">42</span>
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-comments"></i>
-                    Comment
-                    <span class="badge badge-warning">42</span>
-                </a>
-                <div class="dropdown-header text-center">
-                    <strong>Settings</strong>
-                </div>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-user"></i>
-                    Profile
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-wrench"></i>
-                    Setting
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-usd"></i>
-                    Payments
-                    <span class="badge badge-dark">42</span>
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-file"></i>
-                    Projects
-                    <span class="badge badge-primary">42</span>
-                </a>
-                <div class="divider"></div>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-shield"></i>
-                    Lock account
-                </a>
-                <a
-                    class="dropdown-item"
-                    href="#"
-                >
-                    <i class="fa fa-lock"></i>
+                    <i class="fa fa-power-off"></i>
                     Logout
                 </a>
             </div>
@@ -138,9 +71,9 @@
     <main class="main">
         <!-- Breadcrumb -->
         <!-- breaking change 'cui-breadcrumb' -->
-        <cui-breadcrumb>
-            <!-- Breadcrumb Menu -->
-            <li class="breadcrumb-menu d-md-down-none">
+        <!-- <cui-breadcrumb> -->
+        <!-- Breadcrumb Menu -->
+        <!-- <li class="breadcrumb-menu d-md-down-none">
                 <div
                     class="btn-group"
                     role="group"
@@ -167,8 +100,8 @@
                         &nbsp;Settings
                     </a>
                 </div>
-            </li>
-        </cui-breadcrumb>
+            </li> -->
+        <!-- </cui-breadcrumb> -->
         <!-- deprecation warning for 'app-breadcrumb' -->
         <!-- <ol class="breadcrumb"> -->
         <!-- <app-breadcrumb></app-breadcrumb> -->
