--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -26,7 +26,7 @@
                     >
                         <div class="avtar-box">
                             <ngx-avatar
-                                bgColor="{{themeColor}}"
+                                bgColor="#20a8d8"
                                 size="40"
                                 name="{{userName}}"
                             ></ngx-avatar>
