--- a/src/app/views/sub-category/sub-category.component.html
+++ b/src/app/views/sub-category/sub-category.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12 text-right">
             <button
-                class="btn btn-primary mb-3"
+                class="btn btn-primary mb-3 mt-3"
                 (click)="openAddSubCategoryModal(addEditSubCategoryModal)"
             >
                 Add Sub Category
@@ -50,7 +50,7 @@
                                         <td>
                                             <button
                                                 type="button"
-                                                class="btn btn-primary btn-sm"
+                                                class="btn btn-primary btn-sm mr-2"
                                                 (click)="openEditSubCategoryModal(addEditSubCategoryModal,category)"
                                             >
                                                 <i
