--- a/src/app/views/users/users.component.html
+++ b/src/app/views/users/users.component.html
@@ -32,7 +32,7 @@
                                         <td>
                                             <button
                                                 type="button"
-                                                class="btn btn-primary btn-sm"
+                                                class="btn btn-primary btn-sm mr-2"
                                                 (click)="openEditUserMdal(editUserModal,user)"
                                             >
                                                 <i
