--- a/src/app/views/language/language.component.html
+++ b/src/app/views/language/language.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12 text-right">
             <button
-                class="btn btn-primary mb-3"
+                class="btn btn-primary mb-3 mt-3"
                 (click)="openAddLanguageModal(addEditLanguageModal)"
             >
                 Add Language
@@ -52,7 +52,7 @@
                                         <td>
                                             <button
                                                 type="button"
-                                                class="btn btn-primary btn-sm"
+                                                class="btn btn-primary btn-sm mr-2"
                                                 (click)="openEditLanguageModal(addEditLanguageModal,language)"
                                             >
                                                 <i
