--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -5,7 +5,7 @@
                 <div class="col-md-6 mx-auto">
                     <div class="text-center mb-4">
                         <img
-                            src="../../../assets/img/brand/logo-lg.png"
+                            src="./assets/img/brand/logo-lg.png"
                             height="80"
                         >
                     </div>
