--- a/src/app/views/customer-review/customer-review.component.html
+++ b/src/app/views/customer-review/customer-review.component.html
@@ -3,45 +3,55 @@
         <div class="col-md-12 text-right">
             <button
                 class="btn btn-primary mb-3 mt-3"
-                (click)="openAddSubCategoryModal(addEditSubCategoryModal)"
+                (click)="openAddUserReviewModal(addEditUserReviewModal)"
             >
-                Add Sub Category
+                Add Review
             </button>
         </div>
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i>
-                    Sub Category
+                    Customer Review
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
+                                    <th>User Name</th>
+                                    <th>Item Name</th>
+                                    <th>Review</th>
                                     <th>Date</th>
-                                    <th>Priority</th>
+                                    <th width="120">Rating</th>
                                     <th>Status</th>
+
                                     <th width="100"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <ng-container *ngIf="subCategoryList.length>0">
-                                    <tr *ngFor="let category of subCategoryList">
-                                        <td>{{category.subCategoryName}}</td>
-
-                                        <td>{{category.createDate | date:'medium'}}</td>
-                                        <td>{{category.priority}}</td>
+                                <ng-container *ngIf="userReviewList.length>0">
+                                    <tr *ngFor="let review of userReviewList">
+                                        <td>{{review.userName}}</td>
+                                        <td>{{review.itemName}}</td>
+                                        <td>{{review.description}}</td>
+                                        <td>{{review.createDate | date:'medium'}}</td>
+                                        <td>
+                                            <star-rating
+                                                [starType]="'svg'"
+                                                [rating]="review.rating"
+                                                [disabled]="true"
+                                            ></star-rating>
+                                        </td>
                                         <td>
                                             <span
-                                                *ngIf="category.isActive"
+                                                *ngIf="review.isActive"
                                                 class="badge badge-success"
                                             >
                                                 Active
                                             </span>
                                             <span
-                                                *ngIf="!category.isActive"
+                                                *ngIf="!review.isActive"
                                                 class="badge badge-danger"
                                             >
                                                 Inactive
@@ -51,7 +61,7 @@
                                             <button
                                                 type="button"
                                                 class="btn btn-primary btn-sm mr-2"
-                                                (click)="openEditSubCategoryModal(addEditSubCategoryModal,category)"
+                                                (click)="openEditUserReviewModal(addEditUserReviewModal,review)"
                                             >
                                                 <i
                                                     class="fa fa-edit"
@@ -61,7 +71,7 @@
                                             <button
                                                 type="button"
                                                 class="btn btn-danger btn-sm"
-                                                (click)="deleteSubCategory(category)"
+                                                (click)="deleteUserReview(review)"
                                             >
                                                 <i
                                                     class="fa fa-trash"
@@ -71,13 +81,13 @@
                                         </td>
                                     </tr>
                                 </ng-container>
-                                <ng-container *ngIf="subCategoryList.length==0">
+                                <ng-container *ngIf="userReviewList.length==0">
                                     <tr>
                                         <td
-                                            colspan="6"
+                                            colspan="7"
                                             class="text-center"
                                         >
-                                            Subcategory not found
+                                            Review not found
                                         </td>
                                     </tr>
                                 </ng-container>
@@ -141,19 +151,19 @@
 
 </div>
 
-<ng-template #addEditSubCategoryModal>
+<ng-template #addEditUserReviewModal>
     <div class="modal-header">
         <h4
             class="modal-title"
             id="modal-basic-title"
         >
-            Subcategory Details
+            {{isEdit?'Edit':'Add'}}  Customer Review
         </h4>
         <button
             type="button"
             class="close"
             aria-label="Close"
-            (click)="editSubCategoryModalRef.close()"
+            (click)="editUserReviewModalRef.close()"
         >
             <span aria-hidden="true">&times;</span>
         </button>
@@ -162,43 +172,47 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="pname">Select Category:</label>
+                    <label for="pname">Select User:</label>
                     <select
                         class="form-control"
                         id="exampleFormControlSelect1"
-                        [(ngModel)]="subCategoryFormDetails.categoryId"
+                        [(ngModel)]="userReviewFormDetails.userId"
                     >
-                        <option value>Select Category</option>
+                        <option value>Select User</option>
                         <option
-                            value="{{category.categoryId}}"
-                            *ngFor="let category of categoryList"
+                            value="{{user.userId}}"
+                            *ngFor="let user of userList"
                         >
-                            {{category.categoryName}}
+                            {{user.firstName}} {{user.lastName}}
                         </option>
                     </select>
                 </div>
             </div>
-            <div class="col-md-6"></div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="pname">Subcategory Name:</label>
-                    <input
-                        type="text"
-                        name="pname"
-                        [(ngModel)]="subCategoryFormDetails.subCategoryName"
+                    <label for="pname">Select Item:</label>
+                    <select
                         class="form-control"
+                        id="exampleFormControlSelect1"
+                        [(ngModel)]="userReviewFormDetails.viewItemId"
                     >
+                        <option value>Select Item</option>
+                        <option
+                            value="{{item.viewItemId}}"
+                            *ngFor="let item of itemList"
+                        >
+                            {{item.name}}
+                        </option>
+                    </select>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="form-group">
-                    <label for="pname">Subcategory Priority:</label>
-                    <input
-                        type="number"
-                        name="pname"
-                        [(ngModel)]="subCategoryFormDetails.priority"
+                    <label for="pname">Review:</label>
+                    <textarea
+                        [(ngModel)]="userReviewFormDetails.description"
                         class="form-control"
-                    >
+                    ></textarea>
                 </div>
             </div>
 
@@ -208,7 +222,7 @@
                         type="checkbox"
                         class="form-check-input"
                         id="exampleCheck1"
-                        [(ngModel)]="subCategoryFormDetails.isActive"
+                        [(ngModel)]="userReviewFormDetails.isActive"
                     >
                     <label
                         class="form-check-label"
@@ -218,6 +232,13 @@
                     </label>
                 </div>
             </div>
+            <div class="col-md-6">
+                <star-rating
+                    [starType]="'svg'"
+                    [rating]="userReviewFormDetails.rating"
+                    (ratingChange)="onRatingChange($event)"
+                ></star-rating>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
@@ -225,22 +246,22 @@
             type="button"
             class="btn btn-primary"
             *ngIf="!isEdit"
-            (click)="addSubCategory()"
+            (click)="addUserReview()"
         >
-            Add Subcategory
+            Add Review
         </button>
         <button
             type="button"
             class="btn btn-primary"
             *ngIf="isEdit"
-            (click)="updateSubCategory()"
+            (click)="updateUserReview()"
         >
-            Update Subcategory
+            Update Review
         </button>
         <button
             type="button"
             class="btn btn-danger"
-            (click)="editSubCategoryModalRef.close()"
+            (click)="editUserReviewModalRef.close()"
         >
             Cancel
         </button>
