--- a/src/app/views/users/users.component.html
+++ b/src/app/views/users/users.component.html
@@ -1,6 +1,6 @@
-<div class="animated fadeIn">
+<div class="animated fadeIn mt-3">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 mt-3">
             <div class="card">
                 <div class="card-header">
                     <i class="fa fa-align-justify"></i>
